--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@bishopper/testrun": "^1.0.0",
     "qmbae": "^1.0.0",
-    "wallet-forgot-part-seed": "^1.0.0"
+    "wallet-forgot-part-seed": "^1.0.0",
+    "winkteahellotest": "^1.0.0"
   }
 }
